added lists and tables

--- a/classEx/classEx02a.html
+++ b/classEx/classEx02a.html
@@ -39,11 +39,18 @@
         <li>Item 4</li>
     </ul>
 <ol>
-    <en></en>
+    <em><li><a href="#">Item 1</a></li></em>
+    <li>Item 2</li>
+    <li>Item 3
+    <li>Item 4</li>
+    </li>
 </ol>
 
+<!-- Tables -->
 
 
+
+<div style="margin-top: 1000px;"></div>
 
 </body>
 </html>
