added tables and forms

--- a/classEx/classEx02a.html
+++ b/classEx/classEx02a.html
@@ -48,7 +48,37 @@
 
 <!-- Tables -->
 
+<table>
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Age</th>
+    </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Some Body</td>
+            <td>Somebody@someaddress.com</td>    
+            <td>80</td>
+        </tr>
+        <tr>
+            <td>Any Body</td>
+            <td>anybody@someaddress.com</td>    
+            <td>30</td>
+        </tr>
+        <tr>
+            <td>Every Body</td>
+            <td>everybody@someaddress.com</td>    
+            <td>70</td>
+        </tr>
 
+    </tbody>
+</table>
+
+<!-- Forms -->
+
+<form action="somepage.php" method="POST"></form>
 
 <div style="margin-top: 1000px;"></div>
 
