--- a/classEx/classEx02a.html
+++ b/classEx/classEx02a.html
@@ -79,6 +79,12 @@
 <!-- Forms -->
 
 <form action="somepage.php" method="POST"></form>
+    <label>Name:</label>
+    <input type="text" name=firstName placeholder="Enter first name.">
+    <label>Last Name:</label>
+    <input type="text" name=lastName placeholder="Enter last name.">
+    <label>Email:</label>
+    <input type="email" name=email placeholder="Enter email address.">
 
 <div style="margin-top: 1000px;"></div>
 
