--- a/classEx/classEx02a.html
+++ b/classEx/classEx02a.html
@@ -80,11 +80,24 @@
 
 <form action="somepage.php" method="POST"></form>
     <label>Name:</label>
-    <input type="text" name=firstName placeholder="Enter first name.">
+    <input type="text" name="firstName" placeholder="Enter first name.">
     <label>Last Name:</label>
-    <input type="text" name=lastName placeholder="Enter last name.">
+    <input type="text" name="lastName" placeholder="Enter last name.">
     <label>Email:</label>
-    <input type="email" name=email placeholder="Enter email address.">
+    <input type="email" name="email" placeholder="Enter email address.">
+    <label>Message:</label>
+    <textarea name="message"></textarea>
+    <label>Gender:</label>
+    <select name="gender">
+        <option value="male">Male</option>
+        <option value="female">Female</option>
+    </select>
+    <label>Age:</label>
+    <input type="number" name="age" placeholder="Enter your age.">
+    <label>Birthday:</label>
+    <input type="date" name="birthday" placeholder="Enter your birthday.">
+
+    <input type="submit" name="submit" value="Submit">
 
 <div style="margin-top: 1000px;"></div>
 
