--- a/classEx/classEx02a.html
+++ b/classEx/classEx02a.html
@@ -27,7 +27,7 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum adipisci officia dignissimos nostrum porro voluptatem ipsum ducimus voluptates rem quas, quo tempore a iusto cum! Accusamus quos ducimus eum iure!</p>
 
     <br>
-    <br>
+    <hr>
     <br>
 
     <!-- Lists -->
@@ -79,23 +79,47 @@
 <!-- Forms -->
 
 <form action="somepage.php" method="POST"></form>
+<form>
+    <div>
     <label>Name:</label>
     <input type="text" name="firstName" placeholder="Enter first name.">
+    </div>
+    <div>
     <label>Last Name:</label>
     <input type="text" name="lastName" placeholder="Enter last name.">
+    </div>
+    <div>
     <label>Email:</label>
     <input type="email" name="email" placeholder="Enter email address.">
+    </div>
+    <div>  
     <label>Message:</label>
     <textarea name="message"></textarea>
+    </div>
+    <div>
     <label>Gender:</label>
     <select name="gender">
         <option value="male">Male</option>
         <option value="female">Female</option>
     </select>
+    </div>
+    <div>
     <label>Age:</label>
     <input type="number" name="age" placeholder="Enter your age.">
+    </div>
+    <div>
     <label>Birthday:</label>
     <input type="date" name="birthday" placeholder="Enter your birthday.">
+    </div>
+</form>
+
+    <br>
+    <hr>
+    <br>
+
+    <!-- Image -->
+
+    <img src="../anotherFolder.download.png">
 
     <input type="submit" name="submit" value="Submit">
 
