--- a/classEx02b.html
+++ b/classEx02b.html
@@ -4,7 +4,7 @@
     
     <title>Class Exercise 02b</title>
 
-    <link rel="stylesheet" type="text/css" href="styles.css"
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 
