added more divs

--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -9,6 +9,18 @@
             width: 500px;
             height: 500px;
         }
+        div {
+            border: 1px black solid; 
+            background-color: orange;
+            width: 500px;
+            height: 500px;
+        }
+        div {
+            border: 1px black solid; 
+            background-color: orange;
+            width: 500px;
+            height: 500px;
+        }
 
 
     </style>
