--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -9,15 +9,15 @@
             width: 500px;
             height: 500px;
         }
-        div {
+        #id1 {
             border: 1px black solid; 
-            background-color: orange;
+            background-color: yellow;
             width: 500px;
             height: 500px;
         }
-        div {
+        #id2 {
             border: 1px black solid; 
-            background-color: orange;
+            background-color: green;
             width: 500px;
             height: 500px;
         }
