--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -3,38 +3,16 @@
 <head>
     <title>Sign In</title>
     <style>
-        div {
-            border: 1px black solid; 
-            background-color: orange;
-            width: 500px;
-            height: 500px;
+        .container {
+            
         }
-        #id1 {
-            border: 1px black solid; 
-            background-color: yellow;
-            width: 500px;
-            height: 500px;
-        }
-        #id2 {
-            border: 1px black solid; 
-            background-color: green;
-            width: 500px;
-            height: 500px;
-        }
-
 
     </style>
 
 </head>
 <body>
-    <div id="idi">
-
-
-
-    </div>
-    <div id="id2">
-
-
+    <div class="container">
+    
 
     </div>
 </body>
