made changes to .container

--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -4,7 +4,12 @@
     <title>Sign In</title>
     <style>
         .container {
-            
+            border: 1px #000000 solid;
+            background-color: #f7f7f7;
+            border: 1px #000000 solid;
+            margin: 0 auto; 
+            width: 20%;
+            height: 100px;
         }
 
     </style>
