--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -11,12 +11,22 @@
             width: 20%;
             height: 100px;
         }
+        #mainHeader {
+            background-color: blueviolet;
+            text-align: center;
+            color: black;
+            padding: 10px;
+        }
 
     </style>
 
 </head>
 <body>
     <div class="container">
+        <header id="mainHeader">
+            <h5>Need an account?</h5>
+            <a href="register.html"></a>
+        </header>
     
 
     </div>
