--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -5,11 +5,11 @@
     <style>
         .container {
             border: 1px #000000 solid;
-            background-color: #f7f7f7;
+            border-radius: 15px;
             border: 1px #000000 solid;
             margin: 0 auto; 
             width: 20%;
-            height: 100px;
+            overflow: hidden;
         }
         #mainHeader {
             background-color: blueviolet;
@@ -27,6 +27,14 @@
             <h5>Need an account?</h5>
             <a href="register.html"></a>
         </header>
+        <section>
+            <form action="formsphp.php" method="POST">
+
+                
+            </form>
+
+
+        </section>
     
 
     </div>
