--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -30,8 +30,8 @@
 <body>
     <div class="container">
         <header id="mainHeader">
-            <h5>Need an account?</h5>
-            <a href="register.html"></a>
+            Need an account?
+            <a href="register.html">Register</a>
         </header>
         <section>
             <form action="formsphp.php" method="POST">
