--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -20,7 +20,7 @@
         #form {
             margin: 0 auto;
             text-align: center;
-            color: white;
+            color: black;
             padding: 10px;
         }
 
