--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -2,29 +2,7 @@
 <html lang="en">
 <head>
     <title>Sign In</title>
-    <style>
-        .container {
-            border: 1px #000000 solid;
-            border-radius: 15px;
-            border: 1px #000000 solid;
-            margin: 0 auto; 
-            width: 20%;
-            overflow: hidden;
-        }
-        #mainHeader {
-            background-color: blueviolet;
-            text-align: center;
-            color: black;
-            padding: 10px;
-        }
-        #form {
-            margin: 0 auto;
-            text-align: center;
-            color: black;
-            padding: 10px;
-        }
-
-    </style>
+    <link rel="stylesheet" href="classEx/styles.css">
 
 </head>
 <body>
