--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -26,15 +26,11 @@
                     <br>
                     <br>
                     <div>
-                        <a href="#">Forgot Username or Password</a>
-                        <br>
+                        <a href="#">Forgot Username</a>&nbsp;&nbsp;
+                        <a href="#">Forgot Password</a>
                         <input type="submit" name="submit">
                     </div>
-
-                    </div>
-                </div>
             </form>
-
         </section>
     </div>
 </body>
