div class="dim"

--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -34,9 +34,9 @@
         </section>
     </div>
 
-    <div></div>
-    <div></div>
-    <div></div>
+    <div class="dim"></div>
+    <div class="dim"></div>
+    <div class="dim"></div>
 
 </body>
 </html>
