added bgColor 1 and 2

--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -34,8 +34,8 @@
         </section>
     </div>
 
-    <div class="dim"></div>
-    <div class="dim"></div>
+    <div id="bgColor1"class="dim"></div>
+    <div id="bgColor2" class="dim"></div>
     <div class="dim"></div>
 
 </body>
