--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -11,32 +11,26 @@
             Need an account?
             <a href="register.html">Register</a>
         </header>
+
         <section>
-            <form action="formsphp.php" method="POST">
-                <div id="form">
-                    <div id="label">
+            <form action="formphp.php" method="POST">
+                <div id="formData">
+                    <div class="label">
                         <label>Username</label>
                     </div>
                     <input type="text" name="userName">
-                    <br>
                     <div id="label">
                         <label>Password</label>
                     </div>
                     <input type="password" name="password">
                     <br>
                     <br>
-                    <div>
                         <a href="#">Forgot Username</a>&nbsp;&nbsp;
                         <a href="#">Forgot Password</a>
-                        <input type="submit" name="submit">
                     </div>
             </form>
         </section>
     </div>
-
-    <div id="bgColor1"class="dim"></div>
-    <div id="bgColor2" class="dim"></div>
-    <div class="dim"></div>
 
 </body>
 </html>
