moved styles.css

--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -12,7 +12,9 @@
         </header>
 
         <section>
-            <form action="alert("Submit!")"></form>
+            <form onsubmit="alert('Submit!')"></form>
+            <br>
+            <input type="submit" name="submit">
 
         </section>
 
