--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Registration</title>
-    <link rel="stylesheet" href="classEx/styles.css">
+    <link rel="stylesheet" href="SignIn-Registration/styles.css">
 </head>
 <body>
     <div class="container">
@@ -12,7 +12,7 @@
         </header>
 
         <section>
-            <form onsubmit="alert('Submit!')"></form>
+            <form onsubmit="alert('Submit!');return false"></form>
             <br>
             <input type="submit" name="submit">
 
