--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Sign In</title>
-    <link rel="stylesheet" href="classEx/styles.css">
+    <link rel="stylesheet" href="SignIn-Registration/styles.css">
 
 </head>
 <body>
