changed link and div

--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Registration</title>
-    <link rel="stylesheet" href="SignIn-Registration/styles.css">
+    <link rel="stylesheet" href="C:\Users\Administrator\Documents\ITC-111\SignIn-Registration\styles.css">
 </head>
 <body>
     <div class="container">
@@ -13,6 +13,13 @@
 
         <section>
             <form onsubmit="alert('Submit!');return false"></form>
+                <div id="formData">
+                    <div class="label">
+                        
+                    </div>
+
+                </div>
+
             <br>
             <input type="submit" name="submit">
 
