--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -15,6 +15,7 @@
             <form onsubmit="alert('Submit!');return false"></form>
                 <div id="formData">
                     <div class="label">
+                        <label>Name</label><br>
                         
                     </div>
 
