--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -16,7 +16,13 @@
                 <div id="formData">
                     <div class="label">
                         <label>Name</label><br>
-                        
+                        <input type="text" name="firstName" placeholder="Enter First Name">
+                        <input type="text" name="lastName" placeholder="Enter Last Name">
+                    </div>
+                    <div class="label">
+                        <label>Name</label><br>
+                        <input type="text" name="firstName" placeholder="Enter First Name">
+                        <input type="text" name="lastName" placeholder="Enter Last Name">
                     </div>
 
                 </div>
