--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="label">
                         <label>Name</label><br>
-                        <input type="text" name="firstName" placeholder="Enter First Name">
+                        <input type="number" name="age" placeholder="Enter Your Age">
                         <input type="text" name="lastName" placeholder="Enter Last Name">
                     </div>
 
