changed age label

--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -20,9 +20,8 @@
                         <input type="text" name="lastName" placeholder="Enter Last Name">
                     </div>
                     <div class="label">
-                        <label>Name</label><br>
-                        <input type="number" name="age" placeholder="Enter Your Age">
-                        <input type="text" name="lastName" placeholder="Enter Last Name">
+                        <label>Age</label><br>
+                        <input type="number" name="age" id="age">
                     </div>
 
                 </div>
