added email div id

--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -24,6 +24,11 @@
                         <input type="number" name="age" id="age">
                     </div>
 
+                    <div id="label">
+                        <label>Email</label><br>
+                        <input type="email" name="eMail" placeholder="Enter Email Address">
+                        <input type="email" name="eMail" placeholder="Confirm Email Address">
+
                 </div>
 
             <br>
