--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -14,28 +14,43 @@
         <section>
             <form onsubmit="alert('Submit!');return false"></form>
                 <div id="formData">
-                    <div class="label">
+                    <div id="label">
+                        <br>
                         <label>Name</label><br>
-                        <input type="text" name="firstName" placeholder="Enter First Name">
+                        <input type="text" name="firstName" placeholder="Enter First Name">&nbsp;
                         <input type="text" name="lastName" placeholder="Enter Last Name">
                     </div>
-                    <div class="label">
+                    <div style="margin-left: 31px;" id="label">
                         <label>Age</label><br>
-                        <input type="number" name="age" id="age">
+                        <input type="number" name="age" placeholder="Enter Your Age">
                     </div>
-
-                    <div id="label">
+                </div>
+                    <div class="label">
                         <label>Email</label><br>
                         <input type="email" name="eMail" placeholder="Enter Email Address">
                         <input type="email" name="eMail" placeholder="Confirm Email Address">
 
+                    </div>
+
+                    <div class="label">
+                        <label>Username</label><br>
+                        <input type="text" name="userName" placeholder="Enter A Username">
+                    </div>
+
+                    <div class="label">
+                        <label>Password</label><br>
+                        <input type="text" name="password" placeholder="Enter Your Password">&nbsp;
+                        <input type="text" name="password" placeholder="Confirm Your Password">
+                    </div>
+                    <br>
+                    <input type="submit" name="submit">
+                    <br>
+                    <br>
                 </div>
-
-            <br>
-            <input type="submit" name="submit">
-
+                <br>
+                <input type="submit" name="submit">
+            </form>
         </section>
-
 
     </div>
     
