--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -19,8 +19,9 @@
                         <label>Name</label><br>
                         <input type="text" name="firstName" placeholder="Enter First Name">&nbsp;
                         <input type="text" name="lastName" placeholder="Enter Last Name">
+                        <input type="submit" name="submit">
                     </div>
-                    <div style="margin-left: 31px;" id="label">
+                    <div class="label">
                         <label>Age</label><br>
                         <input type="number" name="age" placeholder="Enter Your Age">
                     </div>
