changed div to class

--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -12,9 +12,9 @@
         </header>
 
         <section>
-            <form onsubmit="alert('Submit!');return false"></form>
+            <form onsubmit="alert('Submit!');return false">
                 <div id="formData">
-                    <div id="label">
+                    <div class="label">
                         <br>
                         <label>Name</label><br>
                         <input type="text" name="firstName" placeholder="Enter First Name">&nbsp;
