--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -14,32 +14,32 @@
         <section>
             <form onsubmit="alert('Submit!');return false">
                 <div id="formData">
-                    <div class="label">
+                    <div class="registrationLabel">
                         <br>
                         <label>Name</label><br>
                         <input type="text" name="firstName" placeholder="Enter First Name">&nbsp;
                         <input type="text" name="lastName" placeholder="Enter Last Name">
                     </div>
 
-                    <div class="label">
+                    <div class="registrationLabel">
                         <label>Age</label><br>
                         <input type="number" name="age" placeholder="Enter Your Age">
                     </div>
                 </div>
-                
-                    <div class="label">
+
+                    <div class="registrationLabel">
                         <label>Email</label><br>
                         <input type="email" name="eMail" placeholder="Enter Email Address">
                         <input type="email" name="eMail" placeholder="Confirm Email Address">
 
                     </div>
 
-                    <div class="label">
+                    <div class="registrationLabel">
                         <label>Username</label><br>
                         <input type="text" name="userName" placeholder="Enter A Username">
                     </div>
 
-                    <div class="label">
+                    <div class="registrationLabel">
                         <label>Password</label><br>
                         <input type="text" name="password" placeholder="Enter Your Password">&nbsp;
                         <input type="text" name="password" placeholder="Confirm Your Password">
