--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -15,7 +15,7 @@
         <section>
             <form action="formphp.php" method="POST">
                 <div id="formData">
-                    <div class="label">
+                    <div class="signInLabel">
                         <label>Username</label>
                     </div>
                     <input type="text" name="userName">
