--- a/SignIn-Registration/signin.html
+++ b/SignIn-Registration/signin.html
@@ -19,7 +19,7 @@
                         <label>Username</label>
                     </div>
                     <input type="text" name="userName">
-                    <div id="label">
+                    <div class="signInLabel">
                         <label>Password</label>
                     </div>
                     <input type="password" name="password">
