--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -15,11 +15,11 @@
             <form onsubmit="alert('Submit!');return false">
                 <div id="formData">
                     <div class="registrationLabel">
-                        <br>
                         <label>Name</label><br>
-                        <input type="text" name="firstName" placeholder="Enter First Name">&nbsp;
+                        <input type="text" name="firstName" placeholder="Enter First Name">
                         <input type="text" name="lastName" placeholder="Enter Last Name">
                     </div>
+                    <br>
 
                     <div class="registrationLabel">
                         <label>Age</label><br>
