--- a/SignIn-Registration/registration.html
+++ b/SignIn-Registration/registration.html
@@ -25,7 +25,7 @@
                         <label>Age</label><br>
                         <input type="number" name="age" placeholder="Enter Your Age">
                     </div>
-                </div>
+                    <br>
 
                     <div class="registrationLabel">
                         <label>Email</label><br>
@@ -33,19 +33,23 @@
                         <input type="email" name="eMail" placeholder="Confirm Email Address">
 
                     </div>
+                    <br>
 
                     <div class="registrationLabel">
                         <label>Username</label><br>
                         <input type="text" name="userName" placeholder="Enter A Username">
                     </div>
+                    <br>
 
                     <div class="registrationLabel">
                         <label>Password</label><br>
-                        <input type="text" name="password" placeholder="Enter Your Password">&nbsp;
+                        <input type="text" name="password" placeholder="Enter Your Password">
                         <input type="text" name="password" placeholder="Confirm Your Password">
                     </div>
                     <br>
+                    <div style="text-align:center;">
                     <input type="submit" name="submit">
+                    </div>
                     <br>
                     <br>
                 </div>
