added div, header, nav

--- a/classEx/classEx03.html
+++ b/classEx/classEx03.html
@@ -2,6 +2,19 @@
 <html lang="en">
 <head>
     <title>Class Exercise 03</title>
+    <style>
+        div {
+            margin: 0 auto;
+            width: 50%;
+        }
+        header {
+            text-align: center;
+        }
+        nav {
+            background-color: rgb(199, 115, 199);
+            color:yellow;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -19,6 +32,11 @@
         <!-- Navigation Bar End -->
 
     </header>
-    
+
+    <main>
+        
+
+    </main>
+
 </body>
 </html>
