added link and content section start/end

--- a/classEx/classEx03.html
+++ b/classEx/classEx03.html
@@ -34,7 +34,13 @@
     </header>
 
     <main>
+        <!-- Link Section Start-->
+
+        <!-- Link Section End-->
+
+        <!-- Content Section Start-->
         
+        <!-- Content Section End-->
 
     </main>
 
