--- a/classEx/classEx03.html
+++ b/classEx/classEx03.html
@@ -7,12 +7,26 @@
             margin: 0 auto;
             width: 50%;
         }
+        p {
+            margin: 0;
+        }
+        .center {
+            margin: 10%;
+        }
         header {
             text-align: center;
         }
         nav {
             background-color: rgb(199, 115, 199);
             color:yellow;
+        }
+        section {
+            text-align: center;
+            height: 260px;
+            background-color: rgb(121, 121, 121)
+            float: left; 
+            width: 200px;
+            height: 260px;
         }
     </style>
 </head>
@@ -35,11 +49,31 @@
 
     <main>
         <!-- Link Section Start-->
+        <section class="left">
+            <p>Links</p>
+            <hr>
+            <ul>
+                <li>
+                    <a href="#" title="Link 1">1</a>
+                </li>
 
+                <li>
+                    <a href="#" title="Link 2">2</a>
+                </li>
+
+                <li>
+                    <a href="#" title="Link 3">3</a>
+                </li>
+
+            </ul>
+
+        </section>
         <!-- Link Section End-->
 
         <!-- Content Section Start-->
-        
+        <section class="center"
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora accusantium voluptatem. Quia aut perspiciatis accusantium placeat, nesciunt suscipit? Ipsa animi nobis eligendi dignissimos assumenda ex soluta saepe neque pariatur?</p>
+
         <!-- Content Section End-->
 
     </main>
