changed to side bar

--- a/classEx/classEx03.html
+++ b/classEx/classEx03.html
@@ -16,6 +16,7 @@
             text-align: center;
         }
         header, nav, footer {
+            background-color: blueviolet;
             text-align: center;
         }
         main {
@@ -30,7 +31,7 @@
         section {
             text-align: center;
             height: 260px;
-            background-color: rgb(121, 121, 121);
+            background-color: rgb(199, 115, 199);
             width: 200px;
             height: 260px;
             float: left;
@@ -77,11 +78,11 @@
         </section>
         <!-- Link Section End-->
 
-        <!-- Content Section Start-->
+        <!-- Side Bar Start-->
         <section class="center">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora accusantium voluptatem. Quia aut perspiciatis accusantium placeat, nesciunt suscipit? Ipsa animi nobis eligendi dignissimos assumenda ex soluta saepe neque pariatur?</p>
+        <p id="linkDetail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora accusantium voluptatem. Quia aut perspiciatis accusantium placeat, nesciunt suscipit? Ipsa animi nobis eligendi dignissimos assumenda ex soluta saepe neque pariatur?</p>
         </section>
-        <!-- Content Section End-->
+        <!-- Side Bar End-->
 
     </main>
     <footer>
