--- a/classEx/classEx03.html
+++ b/classEx/classEx03.html
@@ -39,6 +39,7 @@
     </style>
 </head>
 <body>
+    <div>
     <header>
         <!-- Banner Start -->
         <h1>Assignment Name</h1>
@@ -76,6 +77,7 @@
             </ul>
 
         </section>
+        
         <!-- Link Section End-->
 
         <!-- Side Bar Start-->
