changed a href link titles

--- a/classEx/classEx03.html
+++ b/classEx/classEx03.html
@@ -63,15 +63,15 @@
             <hr>
             <ul>
                 <li>
-                    <a href="#" title="Link 1">1</a>
+                    <a href="#" title="Assignment Link 1">1</a>
                 </li>
 
                 <li>
-                    <a href="#" title="Link 2">2</a>
+                    <a href="#" title="Assignment Link 2">2</a>
                 </li>
 
                 <li>
-                    <a href="#" title="Link 3">3</a>
+                    <a href="#" title="Assignment Link 3">3</a>
                 </li>
 
             </ul>
@@ -84,12 +84,15 @@
         <section class="center">
         <p id="linkDetail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora accusantium voluptatem. Quia aut perspiciatis accusantium placeat, nesciunt suscipit? Ipsa animi nobis eligendi dignissimos assumenda ex soluta saepe neque pariatur?</p>
         </section>
+
         <!-- Side Bar End-->
 
     </main>
     <footer>
         <p>Copyright &copy; ITC-111</p>
     </footer>
+
+    </div>
 
 </body>
 </html>
