--- a/classEx/js/classEx04a.html
+++ b/classEx/js/classEx04a.html
@@ -3,7 +3,26 @@
 <head>
     <title>Class Exercise 04a</title>
     <script>
+        /*
+            Examples of variables with global scope 
+        */
+       var name = 'Breann'; // String
+       var age = 24; // Number
+       var isWorking = true; // Boolean
+       /*
+        Examples of variables with local scope. 
+        The let keyword declares a block scoped local variable. 
+        */
 
+        let middleName =  "Nicole";
+        let year = 95;
+        let isAtSchool = false;
+
+        /*
+            Examples of variable that does not change.
+        */ 
+       const lastName = 'Nielsen';
+       const pi = 3.14;
 
     </script>
 </head>
