--- a/classEx/js/index.html
+++ b/classEx/js/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <title>Javascript Basics</title>
-    <script></script>
+    <script>console.log('Hello World');</script>
 </head>
 <body>
-    
-
-    <script></script>
+    <h1>Hello World!</h1>
 </body>
 </html>
