added assignment links 1-4

--- a/classEx/classEx03.html
+++ b/classEx/classEx03.html
@@ -48,8 +48,8 @@
         <!-- Navigation Bar Start -->
         <nav>
             <a href="#" title="home">Home</a>&nbsp;|&nbsp;
-            <a href="#" title="home">Class Exercises</a>&nbsp;|&nbsp;
-            <a href="#" title="home">Assignments</a>&nbsp;|&nbsp;
+            <a href="https://github.com/BreannNielsen/ITC-111/tree/master/classEx" title="home">Class Exercises</a>&nbsp;|&nbsp;
+            <a href="https://github.com/BreannNielsen/ITC-111" title="home">Assignments</a>&nbsp;|&nbsp;
             <a href="#" title="home">Resources</a> 
         </nav>
         <!-- Navigation Bar End -->
@@ -63,15 +63,27 @@
             <hr>
             <ul>
                 <li>
-                    <a href="#" title="Assignment Link 1">1</a>
+                    <a href="https://github.com/BreannNielsen/ITC-111/blob/master/classEx/classEx01.html" title="Assignment Link 1">Class Exercise 1</a>
                 </li>
 
                 <li>
-                    <a href="#" title="Assignment Link 2">2</a>
+                    <a href="https://github.com/BreannNielsen/ITC-111/blob/master/classEx/classEx02a.html" title="Assignment Link 2">Class Exercise 2a</a>
                 </li>
 
                 <li>
-                    <a href="#" title="Assignment Link 3">3</a>
+                    <a href="https://github.com/BreannNielsen/ITC-111/blob/master/classEx/classEx03.html" title="Assignment Link 3">Class Exercise 3</a>
+                </li>
+
+                <li>
+                    <a href="#" title="Assignment Link 3">Class Exercise 4a</a>
+                </li>
+
+                <li>
+                    <a href="#" title="Assignment Link 3">Class Exercise 3</a>
+                </li>
+
+                <li>
+                    <a href="#" title="Assignment Link 3">Class Exercise 3</a>
                 </li>
 
             </ul>
@@ -82,7 +94,7 @@
 
         <!-- Side Bar Start-->
         <section class="center">
-        <p id="linkDetail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora accusantium voluptatem. Quia aut perspiciatis accusantium placeat, nesciunt suscipit? Ipsa animi nobis eligendi dignissimos assumenda ex soluta saepe neque pariatur?</p>
+        <p id="linkDetail">placeholder txt</p>
         </section>
 
         <!-- Side Bar End-->
