added assignment 4a link

--- a/classEx/classEx03.html
+++ b/classEx/classEx03.html
@@ -75,7 +75,7 @@
                 </li>
 
                 <li>
-                    <a href="#" title="Assignment Link 3">Class Exercise 4a</a>
+                    <a href="https://github.com/BreannNielsen/ITC-111/blob/master/classEx/classEx04a.html" title="Assignment Link 4a">Class Exercise 4a</a>
                 </li>
 
                 <li>
