--- a/classEx/classEx03.html
+++ b/classEx/classEx03.html
@@ -42,14 +42,13 @@
     <div>
     <header>
         <!-- Banner Start -->
-        <h1>Assignment Name</h1>
+        <h1>Assignment Page</h1>
         <!-- Banner End -->
 
         <!-- Navigation Bar Start -->
         <nav>
             <a href="#" title="home">Home</a>&nbsp;|&nbsp;
-            <a href="https://github.com/BreannNielsen/ITC-111/tree/master/classEx" title="home">Class Exercises</a>&nbsp;|&nbsp;
-            <a href="https://github.com/BreannNielsen/ITC-111" title="home">Assignments</a>&nbsp;|&nbsp;
+            <a href="https://github.com/BreannNielsen/ITC-111" title="home">GitHub</a>&nbsp;|&nbsp;
             <a href="#" title="home">Resources</a> 
         </nav>
         <!-- Navigation Bar End -->
@@ -79,11 +78,7 @@
                 </li>
 
                 <li>
-                    <a href="#" title="Assignment Link 3">Class Exercise 3</a>
-                </li>
-
-                <li>
-                    <a href="#" title="Assignment Link 3">Class Exercise 3</a>
+                    <a href="https://github.com/BreannNielsen/ITC-111/blob/master/signin.html" title="Assignment Link 3">Sign In & Registration</a>
                 </li>
 
             </ul>
@@ -94,7 +89,7 @@
 
         <!-- Side Bar Start-->
         <section class="center">
-        <p id="linkDetail">placeholder txt</p>
+        <p id="linkDetail">Breann Nielsen's ITC-111 Assignment Page</p>
         </section>
 
         <!-- Side Bar End-->
