done deal broski

--- a/classEx/trumpPage.html
+++ b/classEx/trumpPage.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Trump Page</title>
+
 </head>
 <body>
-    
-    <h1>Donald Trump</h1>
+    <div class="center">
+        <h1>Donald Trump</h1>
+        <h3>"I have tremendous respect for women."</h3>
 
+        <img src="images/donald.jpg" height=400 width=600>
+
+        <ol>
+            <li><strong>2017</strong> - Jan. 20: "I've said if Ivanka weren't my daughter, perhaps I'd be dating her."</li>
+            <li><strong>2017</strong> - Jan. 20: "I have a great relationship with the blacks."</li>
+            <li><strong>2017</strong> - Jan. 20: "The beauty of me is that I'm very rich."</li>
+            <li><strong>2017</strong> - Jan. 20: "It's freezing and snowing in New York--we need global warming!"</li>
+            <li><strong>2017</strong> - Jan. 20: "My fingers are long and beautiful, as, it has been well documented, are various other parts of my body."</li>
+        </ol>
+
+        <a href="https://en.wikipedia.org/wiki/Donald_Trump">For more information, you can click on this link.</a>
+    </div>
 </body>
 </html>
