--- a/classEx/classEx03.html
+++ b/classEx/classEx03.html
@@ -78,7 +78,7 @@
                 </li>
 
                 <li>
-                    <a href="https://github.com/BreannNielsen/ITC-111/blob/master/signin.html" title="Assignment Link 3">Sign In & Registration</a>
+                    <a href="https://github.com/BreannNielsen/ITC-111/blob/master/classEx/trumpPage.html" title="Assignment Link 6a">Sample Tribute Page</a>
                 </li>
 
             </ul>
