--- a/classEx/classEx06c.html
+++ b/classEx/classEx06c.html
@@ -130,10 +130,10 @@ This link is calling a function that is in our script tag.
 'onclick' is an event attribute. All tags can use the onclick
 attriute.
 -->
-<a href="#" onclick='changeLinkText()'>Link 1</a>
+<a href="#" onclick='changeLinkText()'>Class Exercises</a>
 </li>
 <li>
-<a href="#" onclick='changeColor()'>Link 2</a>
+<a href="#" onclick='changeColor()'>Assignments</a>
 </li>
 </ul>
 </div>
