--- a/classEx/steveIrwin.html
+++ b/classEx/steveIrwin.html
@@ -34,7 +34,6 @@
 			<div id="footer">
 				<p class="link-info">
 					If you'd like to learn more about Steve and his legacy, visit this
-
 					<span class="link-cover"> 
           					<a
              id="tribute-link"
@@ -43,6 +42,7 @@
 						class="wiki-link"
 					></a>
 					Wikipedia page.
+					<p>Breann Nielsen 5/21/2020</p>
 					</a>
           </span>
 				</p>
