--- a/classEx/steveIrwin.html
+++ b/classEx/steveIrwin.html
@@ -42,12 +42,13 @@
 						class="wiki-link"
 					></a>
 					Wikipedia page.
-					<p>Breann Nielsen 5/21/2020</p>
+					
 					</a>
           </span>
 				</p>
 			</div>
 		</div>
 	</body>
+	<footer><center><p>Breann Nielsen 5/21/2020</p></center></footer>
 </html>
 
