--- a/classEx/index.html
+++ b/classEx/index.html
@@ -10,6 +10,7 @@
 			<div id="title">
 				<h1>Steve Irwin</h1>
 				<p class="sub">"The Crocodile Hunter"</p>
+				<p>“Crocodiles are easy. They try to kill and eat you. People are harder. Sometimes they pretend to be your friend first.”</p>
 			</div>
 
 			<figure id="img-div">
