--- a/classEx/index.html
+++ b/classEx/index.html
@@ -10,7 +10,6 @@
 			<div id="title">
 				<h1>Steve Irwin</h1>
 				<p class="sub">"The Crocodile Hunter"</p>
-				<p>“Crocodiles are easy. They try to kill and eat you. People are harder. Sometimes they pretend to be your friend first.”</p>
 			</div>
 
 			<figure id="img-div">
@@ -23,12 +22,12 @@
 				<h2>He changed our world</h2>
 				<div class="story-cover">
 					<p class="story">
-						<span>Stephen</span> Robert Irwin (22 February 1962 – 4 September 2006), nicknamed "The Crocodile Hunter," was an Australian zookeeper, television personality, wildlife expert, environmentalist and conservationist.
+						<span>“Crocodiles are easy. They try to kill and eat you. People are harder. Sometimes they pretend to be your friend first.”</span> Stephen Robert Irwin (22 February 1962 – 4 September 2006), nicknamed "The Crocodile Hunter," was an Australian zookeeper, television personality, wildlife expert, environmentalist and conservationist.
 
 						Irwin achieved worldwide fame from the television series The Crocodile Hunter (1996–2007), an internationally broadcast wildlife documentary series which he co-hosted with his wife Terri. Together, the couple also hosted the series Croc Files (1999–2001), The Crocodile Hunter Diaries (2002–2006), and New Breed Vets (2005). They also co-owned and operated Australia Zoo, founded by Irwin's parents in Beerwah, about 80 kilometres (50 mi) north of the Queensland state capital city of Brisbane.
 						
 						Irwin died on 4 September 2006, after being pierced in the chest by a stingray barb while filming in Australia's Great Barrier Reef. His death became international news and was met with expressions of shock and grief by fans, the media, governments, non-profit organizations, and other celebrities. Numerous parks, zoos, streets, and an asteroid have been named in his honor. The Sea Shepherd Conservation Society named its island-class patrol vessel MY Steve Irwin after Irwin. His widow Terri Irwin, with whom he had two children, continues to operate Australia Zoo.
-					</p>
+					
 				</div>
 			</div>
 
