--- a/classEx/classEx07a.html
+++ b/classEx/classEx07a.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Class Exercise 06d</title>
+<title>Class Exercise 07a</title>
 <link rel="stylesheet" href="styles.css">
 <script src="index.js"></script>
 </head>
