messed with links

--- a/classEx/classEx07a.html
+++ b/classEx/classEx07a.html
@@ -26,15 +26,17 @@ as indivitual line items horizontally.
 -->
 <ul>
 <li>
+    <a href="#" onclick='changeLinkText("ce")'>Class Exercises</a>
+</li>
 <!--
 This link is calling a function that is in our script tag.
 'onclick' is an event attribute. All tags can use the onclick
 attriute.
 -->
-<a href="#" onclick='changeLinkText("ce")'>Class Exercises</a>
+<a href="#" onclick='changeLinkText("classEx")'>Class Exercises</a>
 </li>
 <li>
-<a href="#" onclick='changeLinkText("a")'>Assignments</a>
+<a href="#" onclick='changeLinkText("assign")'>Assignments</a>
 </li>
 </ul>
 </div>
