--- a/classEx/classEx07a.html
+++ b/classEx/classEx07a.html
@@ -26,7 +26,7 @@ as indivitual line items horizontally.
 -->
 <ul>
 <li>
-    <a href="#" onclick='changeLinkText("ce")'>Class Exercises</a>
+    <a href="#" onclick='changeLinkText("Home")'>Home</a>
 </li>
 <!--
 This link is calling a function that is in our script tag.
@@ -52,7 +52,7 @@ as it is being used to layout other elements of the page.
 <h4 id="ls_Heading">ITC-111</h4>
 <hr>
 <!-- Seen when page loads or when Home is clicke. Visibility on by default -->
-<div id="divLeftDefault">
+<div id="divLeft_Default">
 <a href='#' class='divLeftLinks' onclick='changeDivRightText("Course Overview")'>Course Overview</a><br>
 <a href='#' class='divLeftLinks' onclick='changeDivRightText("Goals & Objectives")'>Goals & Objectives</a><br>
 <a href='#' class='divLeftLinks' onclick='changeDivRightText("History")'>History</a>
