changed uppercase to lowercase

--- a/classEx/classEx07a.html
+++ b/classEx/classEx07a.html
@@ -26,7 +26,7 @@ as indivitual line items horizontally.
 -->
 <ul>
 <li>
-    <a href="#" onclick='changeLinkText("Home")'>Home</a>
+    <a href="#" onclick='changeLinkText("home")'>Home</a>
 </li>
 <!--
 This link is calling a function that is in our script tag.
