--- a/classEx/classEx07a.html
+++ b/classEx/classEx07a.html
@@ -38,6 +38,9 @@ attriute.
 <li>
 <a href="#" onclick='changeLinkText("assign")'>Assignments</a>
 </li>
+<li>
+<a href="#" onclick='changeLinkText("resource")'>Resources</a>
+</li>
 </ul>
 </div>
 <!-- End of Nav Bar Section -->
