added new div id

--- a/classEx/classEx07a.html
+++ b/classEx/classEx07a.html
@@ -70,6 +70,12 @@ as it is being used to layout other elements of the page.
 <a href='#' class='divLeftLinks' onclick='changeDivRightText("Assignment 01")'>Assignment 01</a><br>
 <a href='#' class='divLeftLinks' onclick='changeDivRightText("Assignment 02")'>Assignment 02</a><br>
 </div>
+<!-- Seen when Resources Link is clicked. -->
+<div id="divLeft_RLinks">
+<a href='#' class='divLeftLinks' onclick='changeDivRightText("w3schools")'><a href="https://www.w3schools.com/">w3schools</a><br>
+<a href='#' class='divLeftLinks' onclick='changeDivRightText("freecodecamp")'><a href="https://www.freecodecamp.org/">freecodecamp</a><br>
+<a href='#' class='divLeftLinks' onclick='changeDivRightText("codeacademy")'><a href="https://www.codecademy.com/">codeacademy</a><br>
+</div>
 </div>
 <!-- End of Side Bar Section -->
 
