--- a/classEx/classEx07a.html
+++ b/classEx/classEx07a.html
@@ -55,7 +55,7 @@ as it is being used to layout other elements of the page.
 <div id='innerDivBodyLeft_Default'>
 <h4 id="ls_Heading">ITC-111</h4>
 <hr>
-<!-- Seen when page loads or when Home is clicke. Visibility on by default -->
+<!-- Seen when page loads or when Home is clicked. Visibility on by default -->
 <div id="divLeft_Default">
 <a href='#' class='divLeftLinks' onclick='changeDivRightText("Course Overview")'>Course Overview</a><br>
 <a href='#' class='divLeftLinks' onclick='changeDivRightText("Goals & Objectives")'>Goals & Objectives</a><br>
