--- a/classEx/js/calculator.html
+++ b/classEx/js/calculator.html
@@ -5,6 +5,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="main">
+            <p id="display1"></p>
+    </div>
+    <div>
+        <input type="text" id="display2">
+    </div>
+    <div class="row">
+        <button type="submit" value="sqrt" name="one" onClick="loadDisplay(this)">&radic;</button>
+
+
+
+
+
+    </div>
 
 
 
@@ -20,8 +34,6 @@
 
 
 
-
-    
     <script src="scripts.js"></script>
 </body>
 </html>
