--- a/classEx/js/calculator.html
+++ b/classEx/js/calculator.html
@@ -6,19 +6,46 @@
 </head>
 <body>
     <div class="main">
+        <!-- Top most display-->
             <p id="display1"></p>
     </div>
+    <!-- Main display -->
     <div>
         <input type="text" id="display2">
     </div>
+    <!-- Button rows -->
     <div class="row">
         <button type="submit" value="sqrt" name="one" onClick="loadDisplay(this)">&radic;</button>
-
-
-
-
-
+        <button type="submit" value="pow" name="exponent" onClick="loadDisplay(this)">&sup2;</button>
+        <button type="submit" value="backspace" name="delete" onClick="loadDisplay(this)">⌫
+        </button>
+        <button type="submit" value="/" name="divide" onClick="loadDisplay(this)">/</button>
     </div>
+    <div class="row">
+        <button type="submit" value="sqrt" name="one" onClick="loadDisplay(this)">7</button>
+        <button type="submit" value="pow" name="exponent" onClick="loadDisplay(this)">8</button>
+        <button type="submit" value="backspace" name="delete" onClick="loadDisplay(this)">9</button>
+        <button type="submit" value="/" name="divide" onClick="loadDisplay(this)">*</button>
+    </div>
+    <div class="row">
+        <button type="submit" value="4" name="four" onClick="loadDisplay(this)">4</button>
+        <button type="submit" value="5" name="five" onClick="loadDisplay(this)">5</button>
+        <button type="submit" value="6" name="six" onClick="loadDisplay(this)">6</button>
+        <button type="submit" value="-" name="subtract" onClick="loadDisplay(this)">-</button>
+    </div>
+    <div class="row">
+        <button type="submit" value="1" name="one" onClick="loadDisplay(this)">1</button>
+        <button type="submit" value="2" name="two" onClick="loadDisplay(this)">2</button>
+        <button type="submit" value="3" name="three" onClick="loadDisplay(this)">3</button>
+        <button type="submit" value="+" name="plus" onClick="loadDisplay(this)">+</button>
+    </div>
+    <div class="row">
+        <button type="submit" value="C" name="clear" onClick="loadDisplay(this)">C</button>
+        <button type="submit" value="0" name="zero" onClick="loadDisplay(this)">0</button>
+        <button type="submit" value="." name="decimal" onClick="loadDisplay(this)">.</button>
+        <button type="submit" value="=" name="equals" onClick="loadDisplay(this)">=</button>
+    </div>
+
 
 
 
