--- a/classEx/js/calculator.html
+++ b/classEx/js/calculator.html
@@ -1,66 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="main">
         <!-- Top most display-->
+        <div>
             <p id="display1"></p>
+        </div>
+        <!-- Main display -->
+        <div>
+            <input type="text" id="display2">
+        </div>
+        <!-- Button Rows -->
+        <div class="row">
+            <button type="submit" name="sqrt" value="sqrt" onclick="loadDisplay(this)">&radic;</button>
+            <button type="submit" name="pow" value="pow" onclick="loadDisplay(this)">x&sup2;</button>
+            <button type="submit" name="backspace" value="⌫" onclick="loadDisplay(this)">⌫</button>
+            <button type="submit" name="div" value="/" onclick="loadDisplay(this)">/</button>
+        </div>
+        <div class="row">
+            <button type="submit" name="seven" value="7" onclick="loadDisplay(this)">7</button>
+            <button type="submit" name="eight" value="8" onclick="loadDisplay(this)">8</button>
+            <button type="submit" name="nine" value="9" onclick="loadDisplay(this)">9</button>
+            <button type="submit" name="multiply" value="*" onclick="loadDisplay(this)">*</button>
+        </div>
+        <div class="row">
+            <button type="submit" name="four" value="4" onclick="loadDisplay(this)">4</button>
+            <button type="submit" name="five" value="5" onclick="loadDisplay(this)">5</button>
+            <button type="submit" name="six" value="6" onclick="loadDisplay(this)">6</button>
+            <button type="submit" name="minus" value="-" onclick="loadDisplay(this)">-</button>
+        </div>
+        <div class="row">
+            <button type="submit" name="one" value="1" onclick="loadDisplay(this)">1</button>
+            <button type="submit" name="two" value="2" onclick="loadDisplay(this)">2</button>
+            <button type="submit" name="three" value="3" onclick="loadDisplay(this)">3</button>
+            <button type="submit" name="plus" value="+" onclick="loadDisplay(this)">+</button>
+        </div>
+        <div class="row">
+            <button type="submit" name="clear" value="C" onclick="loadDisplay(this)">C</button>
+            <button type="submit" name="zero" value="0" onclick="loadDisplay(this)">0</button>
+            <button type="submit" name="point" value="." onclick="loadDisplay(this)">.</button>
+            <button type="submit" name="equal" value="=" onclick="loadDisplay(this)">=</button>
+        </div>
+
+
+
+
+
+
+
+
+
+
     </div>
-    <!-- Main display -->
-    <div>
-        <input type="text" id="display2">
-    </div>
-    <!-- Button rows -->
-    <div class="row">
-        <button type="submit" value="sqrt" name="one" onClick="loadDisplay(this)">&radic;</button>
-        <button type="submit" value="pow" name="exponent" onClick="loadDisplay(this)">&sup2;</button>
-        <button type="submit" value="backspace" name="delete" onClick="loadDisplay(this)">⌫
-        </button>
-        <button type="submit" value="/" name="divide" onClick="loadDisplay(this)">/</button>
-    </div>
-    <div class="row">
-        <button type="submit" value="sqrt" name="one" onClick="loadDisplay(this)">7</button>
-        <button type="submit" value="pow" name="exponent" onClick="loadDisplay(this)">8</button>
-        <button type="submit" value="backspace" name="delete" onClick="loadDisplay(this)">9</button>
-        <button type="submit" value="/" name="divide" onClick="loadDisplay(this)">*</button>
-    </div>
-    <div class="row">
-        <button type="submit" value="4" name="four" onClick="loadDisplay(this)">4</button>
-        <button type="submit" value="5" name="five" onClick="loadDisplay(this)">5</button>
-        <button type="submit" value="6" name="six" onClick="loadDisplay(this)">6</button>
-        <button type="submit" value="-" name="subtract" onClick="loadDisplay(this)">-</button>
-    </div>
-    <div class="row">
-        <button type="submit" value="1" name="one" onClick="loadDisplay(this)">1</button>
-        <button type="submit" value="2" name="two" onClick="loadDisplay(this)">2</button>
-        <button type="submit" value="3" name="three" onClick="loadDisplay(this)">3</button>
-        <button type="submit" value="+" name="plus" onClick="loadDisplay(this)">+</button>
-    </div>
-    <div class="row">
-        <button type="submit" value="C" name="clear" onClick="loadDisplay(this)">C</button>
-        <button type="submit" value="0" name="zero" onClick="loadDisplay(this)">0</button>
-        <button type="submit" value="." name="decimal" onClick="loadDisplay(this)">.</button>
-        <button type="submit" value="=" name="equals" onClick="loadDisplay(this)">=</button>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
