Update and rename classEx07b.html to index.html

--- a/classEx/classEx07b/index.html
+++ b/classEx/classEx07b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Class Exercise 07a</title>
+    <title>Web Portal</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/index.js"></script>
 </head>
