--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
             <div id="divLeft_CELinks">
                 <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 01")'>Class Exercise 01</a><br>
                 <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
             </div>
             <!-- Seen when Assignments Link is clicked. -->
             <div id="divLeft_ALinks">
