--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
             <!-- Seen when Class Exercise Link is clicked. -->
             <div id="divLeft_CELinks">
                 <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 01")'>Class Exercise 01</a><br>
-                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
-                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
-                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
-                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
-                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
-                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
-                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
-                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
-                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02a</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02b</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 03</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 04a</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 05a</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 06b</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 06c</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 06d</a><br>
+                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 07a</a><br>
             </div>
             <!-- Seen when Assignments Link is clicked. -->
             <div id="divLeft_ALinks">
