--- a/classEx/toDoList/index.html
+++ b/classEx/toDoList/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <title>To Do List</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+    <link href="css/font-awesome.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <div class="container">
