--- a/classEx/toDoList/index.html
+++ b/classEx/toDoList/index.html
@@ -8,6 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
+<body>
 <div class="container">
     <div class="header">
         <div class="clear">
@@ -15,7 +16,13 @@
         </div>
         <div id="date"></div>
     </div>
-
+    <div class="content">
+        <ul id="list"></ul>
+    </div>
+    <div class="add-item">
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <input type="text" id="item" placeholder="Add a to-do">
+    </div>
 </div>
 </body>
 </html>
