--- a/classEx/toDoList/index.html
+++ b/classEx/toDoList/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8"></meta>
     <title>To Do List</title>
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-    <link href="css/font-awesome.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web">
+    <link rel="stylesheet" href="font-awesome.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -18,10 +19,16 @@
     </div>
     <div class="content">
         <ul id="list"></ul>
+            <li class="item">
+                <i class="fa fa-circle-thin co" job="complete" id="0"></i>
+                <p class="text">Drink Coffee</p>
+                <i class="fa fa-trash-o de" job="delete" id="0"></i>
+            </li>
+        </ul>
     </div>
-    <div class="add-item">
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <input type="text" id="item" placeholder="Add a to-do">
+    <div class="add-to-do">
+        <i class="fa fa-plus-circle"></i>
+        <input type="text" id="input" placeholder="Add a to-do">
     </div>
 </div>
 </body>
