--- a/classEx/toDoList/index.html
+++ b/classEx/toDoList/index.html
@@ -18,12 +18,13 @@
         <div id="date"></div>
     </div>
     <div class="content">
-        <ul id="list"></ul>
+        <ul id="list">
+            <!--
             <li class="item">
                 <i class="fa fa-circle-thin co" job="complete" id="0"></i>
                 <p class="text">Drink Coffee</p>
                 <i class="fa fa-trash-o de" job="delete" id="0"></i>
-            </li>
+            </li>-->
         </ul>
     </div>
     <div class="add-to-do">
@@ -31,5 +32,6 @@
         <input type="text" id="input" placeholder="Add a to-do">
     </div>
 </div>
+<script src="app.js"></script>
 </body>
 </html>
