--- a/classEx/toDoList/index.html
+++ b/classEx/toDoList/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>JavaScript - To Do List</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web">
-    <link rel="stylesheet" href="font-awesome.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
@@ -31,6 +31,6 @@
             <input type="text" id="input" placeholder="Add a to-do">
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
