--- a/classEx/toDoList/index.html
+++ b/classEx/toDoList/index.html
@@ -1,13 +1,14 @@
-<!-- CODE EXPLAINED CHANNEL -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript - To Do List</title>
+    <title>To-Do List</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="header">
@@ -31,6 +32,9 @@
             <input type="text" id="input" placeholder="Add a to-do">
         </div>
     </div>
+
     <script src="js/app.js"></script>
+    
 </body>
+
 </html>
